# quant_daily_bars

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  supervisord.conf
.github/: copilot-instructions.md
.github/workflows/: docker-build-push.yml  docker-publish.yml  quant-daily-bars-developer-agent.yml
alembic/: env.py
alembic/versions/: 0001_daily_bars_market_data.py  0002_symbol_backfill_status.py  0003_vendor_bar_runs_heartbeat.py
src/quant_daily_bars/: __init__.py  __main__.py  _cli_impl.py  cli.py
src/quant_daily_bars/api/: __init__.py  app.py  bars.py  ingest_jobs.py  readiness.py  testing.py
src/quant_daily_bars/ingest/: __init__.py  job.py  maintenance.py  summary.py
src/quant_daily_bars/vendors/: __init__.py
src/quant_daily_bars/vendors/polygon/: client.py  config.py  errors.py  models.py  rate_limiter.py  transport.py
tests/: test_api.py  test_cli.py  test_client.py  test_ingest.py  test_ingest_jobs.py  test_maintenance.py  test_models.py  test_rate_limiter.py
tests/fixtures/polygon/: AAPL.json  MSFT.json
